# Morefixes

./: .replit  .replit.json  .running_in_workflow  README.md  REPLIT_INSTRUCTIONS.md  RUNNING_THE_BOT.md  TESTING_WORKFLOW.md  TEST_BOT_LAUNCH.md  apply_all_fixes.py  bot.py  check_critical_command.py  check_loaded_commands.py  circular_import_fixes.md  comprehensive_bot_fixes.py  comprehensive_embed_fixes.py  comprehensive_fix_implementation.py  config.py  discord_bot.nix  discord_bot.sh  discord_bot_workflow.sh  embed_fixes_summary.md  fix_bounties_initialization.py  fix_embeds.py  fix_guild_model.py  fix_help_cog.py  fix_server_validation.py  fixes_summary.md  help_cog_fixes.md  improved_server_validation.md  list_all_commands.py  main.py  models.py  pyproject.toml  requirements.txt  rule.md  run-discord-bot.sh  run_all_command_tests.py  run_bot.sh  run_complete_system.sh  run_discord_bot.py  (+23 more)
attached_assets/: Pasted-Final-Discord-Bot-Fix-Phase-Claude-Prompt-Role-You-are-an-elite-deadline-driven-Discord-bot-dev-1746347878944.txt  claude_final_fix_prompt.md
cogs/: admin.py  bounties.py  csv_processor.py  economy.py  events.py  factions.py  help.py  killfeed.py  log_processor.py  player_links.py  premium.py  rivalries.py  setup.py  stats.py
models/: bounty.py  event.py  faction.py  guild.py  player.py  rivalry.py
utils/: embed_builder.py  gambling.py  helpers.py  parser_utils.py  server_utils.py  sftp.py
